--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -42,7 +42,7 @@
                         </div>
                         <ul class="list-group list-group-flush">
                             {% for e in series %}
-                                <li class="list-group-item"><a href="{% url 'blog:post_detail' slug=e.slug %}">{{ forloop.counter }}: {{ e }}</a></li>
+                                <li class="list-group-item"><a href="{% url 'blog:post_detail' slug=e.slug %}">Part #{{ forloop.counter }}: {{ e }}</a></li>
                             {% endfor %}
                         </ul>
                     </div>
