--- a/blog/templates/blog/includes/featured_posts.html
+++ b/blog/templates/blog/includes/featured_posts.html
@@ -17,7 +17,7 @@
             <div class="card shadow h-100">
                 <div class="card-header">
                     <strong>
-                        <a class="link-warning" href="{{ post.categories.first.get_absolute_url }}">{{ post.categories.first|capfirst }}</a>
+                        <a class="card-link" href="{{ post.categories.first.get_absolute_url }}">{{ post.categories.first|capfirst }}</a>
                         <span class="d-inline-block text-muted">
                             • <span class="fst-italic">Featured Post</span>
                         </span>
