--- a/blog/templates/blog/includes/featured_posts.html
+++ b/blog/templates/blog/includes/featured_posts.html
@@ -1,7 +1,7 @@
 {% load read_time %}
 
 {% for post in featured_big %}
-    <div class="card p-4 rounded mb-2 shadow">
+    <div class="card p-4 rounded shadow">
         <div class="container">
             <strong class="d-inline-block mb-2 text-uppercase fst-italic">Featured Post</strong>
             <h1 class="display-4">{% if post.featured_title %} {{ post.featured_title }} {% else %} {{ post.title }} {% endif %}</h1>
@@ -13,7 +13,7 @@
 
 <div class="row row-cols-1 row-cols-lg-2">
     {% for post in featured %}
-        <div class="mb-2 {% cycle 'pe-lg-0' 'pe-kho-lg-12' %}">
+        <div class="mt-2 {% cycle 'pe-lg-0' 'pe-kho-lg-12' %}">
             <div class="card shadow h-100">
                 <div class="card-header">
                     <strong>
