--- a/khoBlog/templates/account/login.html
+++ b/khoBlog/templates/account/login.html
@@ -1,7 +1,9 @@
 {% extends "sub_base.html" %}
 {% load bootstrap5 %}
 
-{% block title %} - Log in{% endblock title %}
+{% block title %}
+    Log in
+{% endblock title %}
 
 {% block page_top_title %}
     Log in
