--- a/khoBlog/templates/account/logout.html
+++ b/khoBlog/templates/account/logout.html
@@ -1,7 +1,9 @@
 {% extends "sub_base.html" %}
 {% load bootstrap5 %}
 
-{% block title %} - Log out{% endblock title %}
+{% block title %}
+    Log out
+{% endblock title %}
 
 {% block page_top_title %}
     Log out
