--- a/khoBlog/templates/includes/nav/nav_list.html
+++ b/khoBlog/templates/includes/nav/nav_list.html
@@ -1,63 +1,47 @@
 {% load instance %}
 
 <h4 class="fst-italic">
-    {% with context.request.resolver_match.view_name as view_name %}
-        {% if view_name != 'pages:page_detail' and view_name != 'pages:page_list' and view_name != 'portfolio:project_list' and view_name != 'portfolio:project_detail' %}
-            {% if view_name != 'blog:category_list' and view_name != 'blog:series_list' and view_name != 'blog:search' and view_name != 'blog:search_results' and view_name != 'blog:post_search_results' and view_name != 'blog:category_search_results' and view_name != 'blog:comment_search_results' and view_name != 'blog:rnd_search_results' %}
-                Post
-            {% elif view_name != 'blog:series_list' and view_name != 'blog:search' and view_name != 'blog:search_results' and view_name != 'blog:post_search_results' and view_name != 'blog:category_search_results' and view_name != 'blog:comment_search_results' and view_name != 'blog:rnd_search_results' %}
-                Category
-            {% elif view_name != 'blog:search' and view_name != 'blog:search_results' and view_name != 'blog:post_search_results' and view_name != 'blog:category_search_results' and view_name != 'blog:comment_search_results' and view_name != 'blog:rnd_search_results' %}
-                Series
-            {% else %}
-                Search Results
-            {% endif %}
-        {% elif view_name != 'portfolio:project_list' and view_name != 'portfolio:project_detail' %}
-            Page
-        {% else %}
-            Project
-        {% endif %}
-    {% endwith %}
-    List
+    {{ context.title }}
 </h4>
 <ol class="list-unstyled mb-0">
-    {% with context.request.resolver_match.view_name as view_name %}
-        {% if view_name != 'pages:page_detail' and view_name != 'pages:page_list' and view_name != 'portfolio:project_list' and view_name != 'portfolio:project_detail' %}
-            {% if view_name != 'blog:series_list' and view_name != 'blog:category_list' and view_name != 'blog:search' and view_name != 'blog:search_results' and view_name != 'blog:post_search_results' and view_name != 'blog:category_search_results' and view_name != 'blog:comment_search_results' and view_name != 'blog:rnd_search_results' %}
-                {% for post in context.posts %}
-                    {% if forloop.counter <= 21 %}
-                        <li>{{ post.id }} - <a href="{{ post.get_absolute_url }}">{{ post.title }}</a></li>
-                    {% endif %}
-                {% endfor %}
-            {% elif view_name != 'blog:series_list' and view_name != 'blog:search' and view_name != 'blog:search_results' and view_name != 'blog:post_search_results' and view_name != 'blog:category_search_results' and view_name != 'blog:comment_search_results' and view_name != 'blog:rnd_search_results' %}
-                {% for cat in context.category_list %}
-                    <li>{{ cat.id }} - <a href="{{ cat.get_absolute_url }}">{{ cat.title }}</a></li>
-                {% endfor %}
-            {% elif view_name != 'blog:search' and view_name != 'blog:search_results' and view_name != 'blog:post_search_results' and view_name != 'blog:category_search_results' and view_name != 'blog:comment_search_results' and view_name != 'blog:rnd_search_results' %}
-                {% for series in context.series_list %}
-                    <li>{{ series.id }} - <a href="{{ series.get_absolute_url }}">{{ series.title }}</a></li>
+    {% if context.posts %}
+        {% for post in context.posts %}
+            {% if forloop.counter <= 21 %}
+                <li>{{ post.id }} - <a href="{{ post.get_absolute_url }}">{{ post.title }}</a></li>
+            {% endif %}
+        {% endfor %}
+    {% endif %}
+
+    {% if context.category_list %}
+        {% for cat in context.category_list %}
+            <li>{{ cat.id }} - <a href="{{ cat.get_absolute_url }}">{{ cat.title }}</a></li>
+        {% endfor %}
+    {% endif %}
+
+    {% if context.series_list %}
+        {% for series in context.series_list %}
+            <li>{{ series.id }} - <a href="{{ series.get_absolute_url }}">{{ series.title }}</a></li>
+        {% endfor %}
+    {% endif %}
+
+    {% if context.query %}
+        {% for element in context.query %}
+            {% if context.query|isinstance:'list' %}
+                {% for e in element %}
+                    <li>{{ e.id }} - <a href="{{ e.get_absolute_url }}">{% firstof e.title e %}</a></li>
                 {% endfor %}
             {% else %}
-                {% for element in context.query %}
-                    {% if context.query|isinstance:'list' %}
-                        {% for e in element %}
-                            <li>{{ e.id }} - <a href="{{ e.get_absolute_url }}">{% firstof e.title e %}</a></li>
-                        {% endfor %}
-                    {% else %}
-                        <li>{{ element.id }} - <a href="{{ element.get_absolute_url }}">{% firstof element.title element %}</a></li>
-                    {% endif %}
-                {% endfor %}
+                <li>{{ element.id }} - <a href="{{ element.get_absolute_url }}">{% firstof element.title element %}</a></li>
             {% endif %}
-        {% else %}
-            {% if view_name != 'portfolio:project_list' and view_name != 'portfolio:project_detail' %}
-                {% for page in context.pages %}
-                    <li><a href="{{ page.get_absolute_url }}">{{ page.title }}</a></li>
-                {% endfor %}
-            {% else %}
-                {% for project in context.projects %}
-                    <li><a href="{{ project.get_absolute_url }}">{{ project.title }}</a></li>
-                {% endfor %}
-            {% endif %}
-        {% endif %}
-    {% endwith %}
+        {% endfor %}
+    {% endif %}
+
+    {% if context.pages %}
+        {% for page in context.pages %}
+            <li><a href="{{ page.get_absolute_url }}">{{ page.title }}</a></li>
+        {% endfor %}
+        {% for project in context.projects %}
+            <li><a href="{{ project.get_absolute_url }}">{{ project.title }}</a></li>
+        {% endfor %}
+    {% endif %}
 </ol>
