--- a/settings_app/templates/settings_app/side_menu_setting.html
+++ b/settings_app/templates/settings_app/side_menu_setting.html
@@ -70,7 +70,7 @@
             {% if context.posts or context.category_list or context.series_list or context.query or context.pages %}
                 {% include 'includes/nav/nav_list.html' %}
             {% else %}
-                <a href="/">a</a>
+                Nothing to list.
             {% endif %}
         {% endif %}
     </div>
