better task app

--- a/todo/templates/todo/delete.html
+++ b/todo/templates/todo/delete.html
@@ -2,14 +2,14 @@
 {% load bootstrap5 %}
 
 {% block content %}
-    <h3>Delete: {{ todo.title }}{% if todo.description %} - {{ todo.description }}{% endif %}</h3>
+    <h3>Delete: {{ task.title }}</h3>
     <form method="POST" class="form">
         {% csrf_token %}
         <h4>Are you sure ?</h4>
         {{ form.as_p }}
 
         {% buttons %}
-            <button type="submit" class="btn btn-primary mt-2">Delete Todo</button>
+            <button type="submit" class="btn btn-primary mt-2">{{ title }}</button>
         {% endbuttons %}
     </form>
 
