--- a/blog/templates/blog/includes/post_categories.html
+++ b/blog/templates/blog/includes/post_categories.html
@@ -1,5 +1,5 @@
 {% for category in post.categories.all %}
     {% if not category.withdrawn or category.withdrawn and user.is_superuser %}
-        <a href="{{ category.get_absolute_url }}" class="btn btn-secondary mt-1">{{ category|capfirst }}</a>
+        <a href="{{ category.get_absolute_url }}">{{ category|capfirst }}</a>{% if not forloop.last %}, {% endif %}
     {% endif %}
 {% endfor %}
