--- a/blog/templates/blog/includes/aside_nav_post_info.html
+++ b/blog/templates/blog/includes/aside_nav_post_info.html
@@ -30,7 +30,7 @@
         {% endif %}
     </div>
 
-    <p>Description: {{ post.description }}</p>
+    <p>Description: {{ description }}</p>
     <p>Clicks: {{ post.clicks }}</p>
     <p>Categories:
         {% include 'blog/includes/post_categories.html' %}
