--- a/blog/templates/blog/includes/post_modal.html
+++ b/blog/templates/blog/includes/post_modal.html
@@ -29,7 +29,7 @@
                         </button>
                     </div>
                     <div class="modal-body">
-                        <p>{{ post.description }}</p>
+                        <p>{{ description }}</p>
                     </div>
                     <div class="modal-footer">
                         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
