--- a/todo/templates/todo/list.html
+++ b/todo/templates/todo/list.html
@@ -3,34 +3,23 @@
 {% load bootstrap5 %}
 
 {% block content %}
-	<form action="{% url 'todo:list' %}" method="POST" class="form">
-        {% csrf_token %}
-        {% bootstrap_form form %}
 
-        {% buttons %}
-            <button type="submit" class="btn btn-primary mt-2">Add New Task</button>
-        {% endbuttons %}
-    </form>
+    <a class="btn btn-primary mt-2" href="{% url 'todo:create_task' %}">Add New Task</a>
 
 	<hr />
 
     <ul class="list-unstyled">
         {% for task in tasks %}
-            {% if task.complete %}
-                <li class="text-muted">
+            <li class="clearfix">
+                <span class="{% if task.complete %} text-muted{% endif %}">
                     <i class="bi bi-check2-square"></i>
-                    #{{ task.pk }} - {{ task.title }}{% if task.description %} - {{ task.description }}{% endif %}
-					<a class="text-info" href="{% url 'todo:update_task' task.id %}">Update</a>
-                    <a class="text-danger float-end" href="{% url 'todo:delete' task.id %}">Delete</a>
-                </li>
-            {% else %}
-                <li>
-                    <i class="bi bi-x-square"></i>
-                    #{{ task.pk }} - {{ task.title }}{% if task.description %} - {{ task.description }}{% endif %}
-					<a class="text-info" href="{% url 'todo:update_task' task.id %}">Update</a>
-                    <a class="text-danger float-end" href="{% url 'todo:delete' task.id %}">Delete</a>
-                </li>
-            {% endif %}
+                    Task #{{ task.id }} - {{ task.title }}{% if task.description %} - {{ task.description }}{% endif %}
+                </span>
+                <span class="float-end">
+                    <a class="text-info" href="{% url 'todo:update_task' task.id %}">Update</a> -
+                    <a class="text-danger" href="{% url 'todo:delete' task.id %}">Delete</a>
+                </span>
+            </li>
 
             <hr />
         {% endfor %}
